[package]
name = "skyline-rs-demo"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "" # This example works with all Xenoblade Switch games

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
